# UILib_v5

./: App.cpp  App.hpp  CMakeLists.txt  build.sh  main.cpp  massif.out.1126159  massif.out.1130287  test
.cache/clangd/index/: AbstractComponent.cpp.5768AC6099FA54C7.idx  AbstractComponent.hpp.79FB3AAA9E3343A4.idx  ComponentManager.cpp.0F7E2B14C00D013D.idx  ComponentManager.hpp.CA00F7C883E7067D.idx  Div.cpp.AB9AB99459DCCEEE.idx  Div.hpp.43FBF8626BFE25FA.idx  IMesh.hpp.0DB9B4A8C40EF78B.idx  Input.cpp.95D40C23891D8BF6.idx  Input.hpp.909BE56BC8D67DE4.idx  QuadMesh.cpp.A2E78A4CCAD8FB11.idx  QuadMesh.hpp.7D3DA3D25806CA29.idx  Renderer.cpp.927B5EAA7A35DE7B.idx  Renderer.hpp.7E3935D74EA86A57.idx  ShaderDataTracker.hpp.31D954DE45B1F81A.idx  ShaderLoader.cpp.D40D2AA1F3C1266C.idx  ShaderLoader.hpp.C9E18C419D2EC85F.idx  UIState.hpp.1EE5DC9CAFD1EF06.idx  Utility.hpp.E6B0B652BB0728DD.idx  main.cpp.44FE6B33FCAC56F4.idx
src/: UIState.hpp  Utility.cpp  Utility.hpp
src/assetLoaders/: TextureLoader.cpp  TextureLoader.hpp
src/assets/shaders/: base.glsl  baseInstanced.glsl  baseTextured.glsl  bordered.glsl  borderedTextured.glsl
src/components/: AbstractComponent.cpp  AbstractComponent.hpp  Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  ComponentManager.cpp  ComponentManager.hpp  Div.cpp  Div.hpp  List.cpp  List.hpp  PinchBar.cpp  PinchBar.hpp  PinchDiv.cpp  PinchDiv.hpp  ResizeDiv.cpp  ResizeDiv.hpp  ScrollBar.cpp  ScrollBar.hpp  SeparatorBar.cpp  SeparatorBar.hpp  TabSwitcher.cpp  TabSwitcher.hpp
src/components/compUtils/: BoxModel.hpp  LightWeightDummy.hpp  ScrollBar.cpp  ScrollBar.hpp  Transform.hpp
src/components/layoutCalc/: LayoutCalculator.cpp  LayoutCalculator.hpp  LayoutData.hpp  LayoutUtils.hpp  PinchLayoutCalculator.cpp  PinchLayoutCalculator.hpp
src/components/utils/: BoxModel.hpp
src/inputManagement/: Input.cpp  Input.hpp
src/mesh/: IMesh.hpp  QuadMesh.cpp  QuadMesh.hpp
src/renderer/: LightWeightRenderer.hpp  Renderer.cpp  Renderer.hpp
src/shaderManagement/: ShaderDataTracker.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/vendors/: stb_image.h
